đua lên phần lít

--- a/index.html
+++ b/index.html
@@ -67,14 +67,325 @@
         </div>
         <!-- end__search -->
         <div class="menu-job">
-          <div class="menu-job__tittle">
-            <div class="job-tittle">
-              <div class="job-tittle__padding">
-                <img src="./css/imges/vector-mui-ten/Vector.svg" alt="" class="job-tittle__img" />
+          <div class="menu-job__title">
+            <div class="job-title">
+              <div class="job-title__padding">
+                <div class="job-title__padding-inside">
+                  <img src="./css/imges/vector-mui-ten/Vector.svg" alt="" class="job-tittle__img" />
+                </div>
               </div>
+              <h2 class="title">Job tốt nhất</h2>
             </div>
             <a href="#" class="job-see">Xem chi tiết</a>
           </div>
+          <ul class="container">
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Data Engineer</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+            <li class="container-card">
+              <div class="card-head">
+                <div class="card-headLogo">
+                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
+                  <p class="head-name">Junior PHP Developer <br />~ 15-2...</p>
+                </div>
+                <div class="card-button">
+                  <a href="" class="card-button__full">Full-time</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="body-money">
+                  <p class="money-name">Hoa hồng</p>
+                  <p class="money-vailua">12,000,000<span>VNĐ</span></p>
+                </div>
+                <div class="body-money">
+                  <p class="money-name">Thưởng</p>
+                  <p class="money-vailua">50,000,000<span>VNĐ</span></p>
+                </div>
+              </div>
+              <div class="card-foot">
+                <div class="foot-left">
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Hà Nội</a>
+                  </div>
+                  <div class="foot-left__button">
+                    <a href="£" class="foot-buton">Onboard</a>
+                  </div>
+                </div>
+                <div class="foot-right">
+                  <a class="foot-right__button">PREMIUM</a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
