đẩy phần list lên

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header">
         <div class="header-nav">
           <a href="" class="header-logo">
-            <img src="./css/imges/img-logo.png" alt="" class="header-nav__logo" />
+            <img src="./css/imges/logo.png" alt="" class="header-nav__logo" />
           </a>
           <ul class="header-list">
             <li class="header-list__iteam">
@@ -39,12 +39,12 @@
         <div class="form-padding">
           <div class="form-layout">
             <div class="form-search__left">
-              <img src="./css/imges/vuesax/linear/vuesax/linear/Vector.png" class="search__btn-left" alt="" />
+              <img src="./css/imges/search-normal.png" class="search__btn-left" alt="" />
               <input type="text" class="form-search__input" placeholder="Nhập vị trí từ khóa" />
             </div>
             <div class="form-input">
               <div class="input-posision">
-                <img src="./css/imges/Iconly/Light/Stroke 3.png" alt="" class="form-input__img" />
+                <img src="./css/imges/Location.png" alt="" class="form-input__img" />
                 <input type="text" class="form-input__posision" placeholder="Nhập địa chỉ" />
               </div>
               <img src="./css/imges/vector-mui-ten/vuesax/linear/Vector.png" alt="" class="input-choice" />
@@ -54,6 +54,7 @@
             </div>
           </div>
         </div>
+        <!-- lisst-sugger -->
         <div class="sugger-wapper">
           <span class="sugger-text">Đề xuất:</span>
           <li class="sugger-list">ReactJS</li>
@@ -65,7 +66,7 @@
           <li class="sugger-list">Java</li>
           <li class="sugger-list">Mobie</li>
         </div>
-        <!-- end__search -->
+        <!--  phan-job-name -->
         <div class="menu-job">
           <div class="menu-job__title">
             <div class="job-title">
@@ -78,6 +79,7 @@
             </div>
             <a href="#" class="job-see">Xem chi tiết</a>
           </div>
+          <!-- list-job -->
           <ul class="container">
             <li class="container-card">
               <div class="card-head">
@@ -116,8 +118,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/tronf.png" alt="" class="head-logo" />
+                  <p class="head-name">Senior PHP Developer<br />~ Upto 40M</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -150,8 +152,11 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/unsplash_gTV2osuOsJc.png" alt="" class="head-logo" />
+                  <p class="head-name">
+                    Senior PHP Developer <br />
+                    ~ Upto 40M
+                  </p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -184,8 +189,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/mc.img.png" alt="" class="head-logo" />
+                  <p class="head-name">Java Software Engineer<br />(multiple positions)</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -218,8 +223,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/mancity.png" alt="" class="head-logo" />
+                  <p class="head-name">Senior Fullstack<br />Engineer</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -252,8 +257,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/bonton.png" alt="" class="head-logo" />
+                  <p class="head-name">C++ Network Software<br />Engineer</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -286,8 +291,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/pendi.img.png" alt="" class="head-logo" />
+                  <p class="head-name">Junior PHP Developer<br />~ 15-2...</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -320,8 +325,8 @@
             <li class="container-card">
               <div class="card-head">
                 <div class="card-headLogo">
-                  <img src="./css/imges/img-logo.png" alt="" class="head-logo" />
-                  <p class="head-name">Data Engineer</p>
+                  <img src="./css/imges/mc.img.png" alt="" class="head-logo" />
+                  <p class="head-name">Junior PHP Developer<br />~ 15-2...</p>
                 </div>
                 <div class="card-button">
                   <a href="" class="card-button__full">Full-time</a>
@@ -386,6 +391,62 @@
               </div>
             </li>
           </ul>
+        </div>
+        <div class="aside">
+          <header class="aside-header">
+            <a href="" class="aside-header__link">why?</a>
+            <h1 class="aside-title">Tại Sao Lựa Chọn Recland?</h1>
+          </header>
+          <div class="aside-body">
+            <section class="aside-section aside-section__green">
+              <div class="section-logo">
+                <img src="./css/imges/chao-job.png" alt="#" class="section-img" />
+              </div>
+              <h3 class="section-title">Đa dạng việc làm, thêm nhiều lựa chọn hấp dẫn</h3>
+              <p class="section-text">Hơn 200+ việc làm IT, giúp các bạn REC có một kho việc làm để các bạn tìm kiếm, sale jobs đến những ứng viên phù hợp.</p>
+            </section>
+            <section class="aside-section aside-section__blue">
+              <div class="section-logo">
+                <img src="./css/imges/Dollar.png" alt="#" class="section-img" />
+              </div>
+              <h3 class="section-title">Cơ chế hoa hồng hấp dẫn, rõ ràng và minh bạch</h3>
+              <p class="section-text">RecLand đem đến cho các bạn REC mức hoa hồng hấp dẫn, giúp cho các bạn REC có được mức thu nhập tương xứng mà không cần đến công ty làm việc</p>
+            </section>
+            <section class="aside-section aside-section__red">
+              <div class="section-logo">
+                <img src="./css/imges/Network.png" alt="#" class="section-img" />
+              </div>
+              <h3 class="section-title">Mở rộng network và học hỏi từ cộng đồng</h3>
+              <p class="section-text">RecLand cũng thường xuyên tổ chức những buổi chia sẻ, buổi offline nhằm giúp các bạn REC trau dồi, học hỏi và mở rộng được network trong lĩnh vực tuyển dụng.</p>
+            </section>
+          </div>
+        </div>
+        <div class="partner">
+          <h1 class="partner-name">Đối tác</h1>
+          <div class="partner-list">
+            <div class="partner-iteam">
+              <img src="./css/imges/MU.img.png" alt="" class="partner-iteam__img" />
+            </div>
+            <div class="partner-iteam">
+              <img src="./css/imges/mic.img.png" alt="" class="partner-iteam__img" />
+            </div>
+            <div class="partner-iteam">
+              <img src="./css/imges/wwlon.img.png" alt="" class="partner-iteam__img" />
+            </div>
+            <div class="partner-iteam">
+              <img src="./css/imges/fendilon.img.png" alt="" class="partner-iteam__img" />
+            </div>
+            <div class="partner-iteam">
+              <img src="./css/imges/bond street.png" alt="" class="partner-iteam__img" />
+            </div>
+          </div>
+        </div>
+        <div class="cooperate">
+          <div class="cooperate-header">
+            <a href="" class="cooperate-linkk"> Quy tring làm việc</a>
+            <h1 class="cooperate-title">Hợp tác cùng RecLang</h1>
+          </div>
+          <div class="cooperate-list"></div>
         </div>
       </div>
     </div>
