đua phần hợp tác lên

--- a/index.html
+++ b/index.html
@@ -443,10 +443,29 @@
         </div>
         <div class="cooperate">
           <div class="cooperate-header">
-            <a href="" class="cooperate-linkk"> Quy tring làm việc</a>
+            <a href="" class="cooperate-linkk"> Quy trình làm việc</a>
             <h1 class="cooperate-title">Hợp tác cùng RecLang</h1>
           </div>
-          <div class="cooperate-list"></div>
+          <div class="cooperate-list">
+            <div class="cooperate-iteam">
+              <img src="./css/imges/somot.png" alt="" class="cooperate-iteam__number" />
+              <img src="./css/imges/Addxanh.png" alt="" class="cooperate-iteam__img" />
+              <h4 class="cooperate-iteam__title">Tạo một tài khoản</h4>
+              <p class="cooperate-iteam__text">Trở thành member trên RecLand</p>
+            </div>
+            <div class="cooperate-iteam">
+              <img src="./css/imges/sohai.png" alt="" class="cooperate-iteam__number" />
+              <img src="./css/imges/Search.png" alt="" class="cooperate-iteam__img" />
+              <h4 class="cooperate-iteam__title">Tạo một tài khoản</h4>
+              <p class="cooperate-iteam__text">Trở thành member trên RecLand</p>
+            </div>
+            <div class="cooperate-iteam">
+              <img src="./css/imges/soba.png" alt="" class="cooperate-iteam__number" />
+              <img src="./css/imges/Shield.png" alt="" class="cooperate-iteam__img" />
+              <h4 class="cooperate-iteam__title">Tạo một tài khoản</h4>
+              <p class="cooperate-iteam__text">Trở thành member trên RecLand</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
