hoàn thành recland

--- a/index.html
+++ b/index.html
@@ -456,17 +456,98 @@
             <div class="cooperate-iteam">
               <img src="./css/imges/sohai.png" alt="" class="cooperate-iteam__number" />
               <img src="./css/imges/Search.png" alt="" class="cooperate-iteam__img" />
-              <h4 class="cooperate-iteam__title">Tạo một tài khoản</h4>
-              <p class="cooperate-iteam__text">Trở thành member trên RecLand</p>
+              <h4 class="cooperate-iteam__title">Tìm kiếm công việc</h4>
+              <p class="cooperate-iteam__text">Tìm kiếm công việc phù hợp để mời ứng viên</p>
             </div>
             <div class="cooperate-iteam">
               <img src="./css/imges/soba.png" alt="" class="cooperate-iteam__number" />
-              <img src="./css/imges/Shield.png" alt="" class="cooperate-iteam__img" />
-              <h4 class="cooperate-iteam__title">Tạo một tài khoản</h4>
-              <p class="cooperate-iteam__text">Trở thành member trên RecLand</p>
+              <img src="./css/imges/Shield.png" alt="" class="cooperate-iteam__img cooperate-iteam__img-shield" />
+              <h4 class="cooperate-iteam__title cooperate-iteam__title-shield">Giới thiệu ứng viên</h4>
+              <p class="cooperate-iteam__text">Giới thiệu ứng viên vào các vị trí đang tuyển, process ứng viên và nhận kết quả</p>
             </div>
           </div>
         </div>
+        <div class="login">
+          <div class="login-left">
+            <div class="login-left__padding">
+              <div class="login-img__hear">
+                <div class="login-img__padding">
+                  <img class="login-img" src="./css/imges/lol.png" alt="" />
+                </div>
+              </div>
+              <div class="login-text">
+                <h3 class="login-title">Bạn muốn đến với Recland</h3>
+                <p class="login-text__inside">Chúng tôi sẽ giúp bạn thành công trên con đường Recer</p>
+              </div>
+            </div>
+          </div>
+          <div class="login-right">
+            <div class="login-right__search">
+              <a href="Tìm Kiếm" class="button-search__item">Đăng ký Ngay</a>
+            </div>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="bottom-left">
+            <input type="text" class="bottom-input" placeholder="Enter your email address" />
+
+            <img src="./css/imges/bottom.png" alt="" class="bottom-img" />
+          </div>
+          <div class="bottom-right">
+            <div class="bottom-container">
+              <div class="bottom-cv">
+                <div class="bottom-number">
+                  <h4 class="number__color">199</h4>
+                </div>
+              </div>
+              <span class="bottom-text">Công việc</span>
+            </div>
+            <div class="bottom-container">
+              <div class="bottom-cv">
+                <div class="bottom-number">
+                  <h4 class="number__color">93</h4>
+                </div>
+              </div>
+              <span class="bottom-text">Công ty</span>
+            </div>
+          </div>
+        </div>
+        <div class="contac">
+          <div class="contac-icon">
+            <img src="./css/imges/logo-end.png" alt="" class="contac-img" />
+            <div class="icon-wapper">
+              <img src="./css/imges/Facebook.png" alt="" class="icon-iteam" />
+              <img src="./css/imges/twitter.png" alt="" class="icon-iteam" />
+              <img src="./css/imges/linkedin.png" alt="" class="icon-iteam" />
+              <img src="./css/imges/instagram.png" alt="" class="icon-iteam" />
+            </div>
+          </div>
+          <ul class="contac-list">
+            <li class="contac-iteam">
+              <h4 class="contac-title">Địa chỉ</h4>
+              <p class="contac-text">
+                Tòa nhà AC, 78 Duy Tân,<br />
+                Quận Cầu Giấy, Hà Nội
+              </p>
+            </li>
+            <li class="contac-iteam">
+              <h4 class="contac-title">Liên hệ</h4>
+              <p class="contac-text">0369 713 819 <br />luat.nguyen@recland.co</p>
+            </li>
+            <li class="contac-iteam">
+              <h4 class="contac-title">Menu</h4>
+              <p class="contac-text">Trang chủ <br />Tìm kiếm công việc <br />Sitemap</p>
+            </li>
+            <li class="contac-iteam">
+              <h4 class="contac-title">Tài khoản của tôi</h4>
+              <p class="contac-text">Tài khoản của tôi <br />Kho CV <br />Thông tin cá nhân</p>
+            </li>
+          </ul>
+        </div>
+        <div class="footer">
+          <p class="footer-text">Copyright © 2022 Recland.co</p>
+        </div>
+        <img src="./css/imges/Frame 3150.png" alt="" class="nav" />
       </div>
     </div>
   </body>
